quality of life methods
- DataFrame toString(maxRows)
- column conversion methods